	* handle invalid arguments to set_piece_deadline()
	* move_storage did not work for torrents without metadata
	* improve shutdown time by only announcing to trackers whose IP we know
	* fix python3 portability issue in python binding
	* delay 5 seconds before reconnecting socks5 proxy for UDP ASSOCIATE
	* fix NAT-PMP crash when removing a mapping at the wrong time
	* improve path sanitization (filter unicode text direction characters)
	* deprecate partial_piece_info::piece_state
	* bind upnp requests to correct local address
	* save resume data when removing web seeds
	* fix proxying of https connections
	* fix race condition in disk I/O storage class
	* fix http connection timeout on multi-homed hosts
	* removed depdendency on boost::uintptr_t for better compatibility
	* fix memory leak in the disk cache
	* fix double free in disk cache
	* forward declaring libtorrent types is discouraged. a new fwd.hpp header is provided

1.1.3 release

	* removed (broken) support for incoming connections over socks5
	* restore announce_entry's timestamp fields to posix time in python binding
	* deprecate torrent_added_alert (in favor of add_torrent_alert)
	* fix python binding for parse_magnet_uri
	* fix minor robustness issue in DHT bootstrap logic
	* fix issue where torrent_status::num_seeds could be negative
	* document deprecation of dynamic loading/unloading of torrents
	* include user-agent in tracker announces in anonymous_mode for private torrents
	* add support for IPv6 peers from udp trackers
	* correctly URL encode the IPv6 argument to trackers
	* fix default file pool size on windows
	* fix bug where settings_pack::file_pool_size setting was not being honored
	* add feature to periodically close files (to make windows clear disk cache)
	* fix bug in torrent_handle::file_status
	* fix issue with peers not updated on metadata from magnet links

1.1.2 release

	* default TOS marking to 0x20
	* fix invalid access when leaving seed-mode with outstanding hash jobs